update va delete qo'ahildi
