# src/main/app/api/api.go
@@ -8,5 +8,7 @@ import (
 func Api(router *http.ServeMux, handler *handler.Handler) {
 	router.HandleFunc("POST /articles/create", handler.Create)
 	router.HandleFunc("GET /articles", handler.GetAll)
+	router.HandleFunc("PUT /articles/update", handler.Update)
+	router.HandleFunc("DELETE /articles/delete", handler.Delete)
 
 }
